--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   pinput: ^1.2.2
   cloud_firestore: ^3.1.5
   bottom_navy_bar: ^6.0.0
+  firebase_storage: ^10.2.4
+  flutter_native_image: ^0.0.6+1
+  permission_handler: ^8.3.0
+  file_picker: ^4.3.0
+  app_settings: ^4.1.1
 
 dev_dependencies:
   flutter_test:
