--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_native_image: ^0.0.6+1
   permission_handler: ^8.3.0
   file_picker: ^4.3.0
+  cached_network_image: ^3.2.0
   app_settings: ^4.1.1
 
 dev_dependencies:
