--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   file_picker: ^4.3.0
   cached_network_image: ^3.2.0
   app_settings: ^4.1.1
+  badges: ^2.0.2
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
